--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Mhy Wiki</h1>
+            <h1>NGAWIKI 69</h1>
         </div>
         <div class="chat-box" id="chatBox">
             <div class="message bot">
